    so that MATLAB does not misinterpret random test scripts as MATLAB unit tests.
  - Allow data exchange between tests and their fixtures in a function test suite.
    When using function-based test suites, you can pass data between the set_up fixture,
    your tests, and the tear_down fixture by using input and output arguments.
  - Fix partial incompatibility with R2017b.


mlUnit 1.10 (2025-02-10)
------------------------

  - Added mlunit_variation, providing parameter variations for tests.
    A test can call mlunit_variation to define a dynamic or static
    list of parameter configurations that are used to call the same
    function several times, but with different parameters.
    If any of the variations fail or raise an error, the others
    continue to run. The test result will be the worst result of
    its variations.


mlUnit 1.9.9 (2024-12-23)
-------------------------

  - Added support for a final MATLAB command to the Ant automation,
    so that a command can be run after the tests. For example,
    for cleaning up without triggering a Save dialog.


mlUnit 1.9.8 (2024-11-13)
-------------------------

  - Compatibility with MATLAB R2024b.
  - Fix printable output on R2015b, where isstring was included,
    but still had errors.
  - When using assert_equals functions, also output difference markers
    for common cell arrays.
  - Improve run time by resetting the path only when it changes.


mlUnit 1.9.7 (2024-06-21)
-------------------------

  - Support MATLAB strings for comparison and output.
  - Support multidimensional cell array output.
    When assert_equals outputs diff information, the structure of 2D cell
    arrays is maintained. The structure of higher dimensions gets linearized.
  - Warn if disable_tests is ineffective, because a suite has been triggered
    individually.
  - Support a reason when excluding functions with load_tests_from_mfile.


mlUnit 1.9.6 (2023-10-20)
-------------------------
