@@ -8,17 +8,26 @@ function test = test_data_propagation
 test = load_tests_from_mfile(test_loader);
 
 
-function data = set_up(test_name)
+function data_out = suite_set_up(data_in, test_name)
 
-    data = struct();
+    data_out = struct();
+    data_out.name_suite_set_up = test_name;
+    data_out.data_suite_set_up = data_in;
+
+
+function data = set_up(data, test_name)
+
     data.name = test_name;
     data.state = 'started';
 
 
-function data_out = test_set_up_data(data_in)
+function data_out = test_set_up_data(data_in, test_name)
 
+    assert_equals('test_set_up_data', test_name)
     assert_equals('test_set_up_data', data_in.name)
-    assert_equals('started', data_in.state);
+    assert_equals('suite_set_up', data_in.name_suite_set_up)
+    assert_equals([], data_in.data_suite_set_up)
+    assert_equals('started', data_in.state)
     data_out = 'tested';
 
 
@@ -29,6 +38,12 @@ function data_out = test_data_independency(data_in)
     data_out = 'finished';
 
 
-function tear_down(data)
+function tear_down(data, test_name)
 
-    assert_contains({'finished', 'tested'}, data);
+    assert_contains({'finished', 'tested'}, data)
+    assert_contains({'test_set_up_data', 'test_data_independency'}, test_name)
+
+function suite_tear_down(data)
+
+    assert_equals(2, numel(fieldnames(data)))
+    assert_equals([], data.data_suite_set_up)
