@@ -16,6 +16,8 @@ currently in development
   - Allow data exchange between tests and their fixtures in a function test suite.
     When using function-based test suites, you can pass data between the set_up fixture,
     your tests, and the tear_down fixture by using input and output arguments.
+    You can also pass data from the suite_set_up fixture to the test set_up fixture,
+    and to the suite_tear_down fixture similarly.
   - Fix partial incompatibility with R2017b.
 
 
